@@ -2,6 +2,7 @@
 
 x.x:
 
+- fixed: user can no longer register on an invitation only site without invitation
 - changed: invitation only sites can now have a register page but no link to it
 
 2.2.1 (2013-05-22):
